; ModuleID = '/home/carl/AnghaBench/h2o/deps/libgkc/extr_gkc.c_list_add.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/libgkc/extr_gkc.c_list_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list = type { %struct.list*, %struct.list* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.list*, %struct.list*)* @list_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @list_add(%struct.list* %0, %struct.list* %1) #0 {
  %3 = alloca %struct.list*, align 8
  %4 = alloca %struct.list*, align 8
  store %struct.list* %0, %struct.list** %3, align 8
  store %struct.list* %1, %struct.list** %4, align 8
  %5 = load %struct.list*, %struct.list** %3, align 8
  %6 = getelementptr inbounds %struct.list, %struct.list* %5, i32 0, i32 1
  %7 = load %struct.list*, %struct.list** %6, align 8
  %8 = load %struct.list*, %struct.list** %4, align 8
  %9 = getelementptr inbounds %struct.list, %struct.list* %8, i32 0, i32 1
  store %struct.list* %7, %struct.list** %9, align 8
  %10 = load %struct.list*, %struct.list** %4, align 8
  %11 = load %struct.list*, %struct.list** %4, align 8
  %12 = getelementptr inbounds %struct.list, %struct.list* %11, i32 0, i32 1
  %13 = load %struct.list*, %struct.list** %12, align 8
  %14 = getelementptr inbounds %struct.list, %struct.list* %13, i32 0, i32 0
  store %struct.list* %10, %struct.list** %14, align 8
  %15 = load %struct.list*, %struct.list** %4, align 8
  %16 = load %struct.list*, %struct.list** %3, align 8
  %17 = getelementptr inbounds %struct.list, %struct.list* %16, i32 0, i32 1
  store %struct.list* %15, %struct.list** %17, align 8
  %18 = load %struct.list*, %struct.list** %3, align 8
  %19 = load %struct.list*, %struct.list** %4, align 8
  %20 = getelementptr inbounds %struct.list, %struct.list* %19, i32 0, i32 0
  store %struct.list* %18, %struct.list** %20, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
